# HackRF-stuff

./: README.md
C16_De-Buijn/: 10-bit_De-Buijn.c16  4-bit_De-Buijn.c16  8-bit_De-Buijn.TXT  8-bit_De-Buijn.c16
Hackrf_ook/: Blacklist-cmd.txt  CMakeLists.txt  README.md  hackrf_ook.c
Hackrf_ook/cmake/Modules/: FindLibHACKRF.cmake
Motorola/: MOTO-(T800)FRS-EMERGENCY-TRIGGER.c16  Moto(T800)SMS(TEXT_TEST).c16
Netgear-WiFi_password_genrator/: README  netgear_password_gen.sh
OOK-Fuzzer/: README.md  hackrf_ook_2_sig_alt_ferq.sh  hackrf_ook_alt_ferq_BF.sh  hackrf_ook_fuzzer.sh  hackrf_ook_fuzzer_Fixed-RND-FERQ.sh
Pagers/: Jtech_pager-Activate_all(457.6Mhz).c16  Jtech_pager-Activate_all(457.6Mhz).txt
WPA2_Keyspace_gen/: README  WPA2_keyspace_gen.sh
bruijn sequence scripts/: README.txt  bruijnS-output_bit.sh  bruijnS-output_hex.sh
